--- a/Style.css
+++ b/Style.css
@@ -2,4 +2,7 @@ body {
   background: white;
   padding: 0px; //Til ad thad se ekki litill rammi i kring um siduna
   margin: 0px; //Nuna naer thetta alveg ut i kant
+
+  width: 100%;
+  height: 100%;
 }
