--- a/Style.css
+++ b/Style.css
@@ -5,4 +5,6 @@ body {
 
   width: 100%;
   height: 100%;
+  overflow: hidden; /*  Disable scrollbars, sometimes scrollbars can be useful */
+	display: block;  /* No floating content on sides - makes canvas act like a div as opposed to span. Ensures nothing displays on either size of the canvas */
 }
