--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,7 @@
 body {
   background: white;
-  padding: 0px; //Til ad thad se ekki litill rammi i kring um siduna
-  margin: 0px; //Nuna naer thetta alveg ut i kant
+  padding: 0px; /* Til ad thad se ekki litill rammi i kring um siduna */
+  margin: 0px; /* Nuna naer thetta alveg ut i kant */
 
-  width: 100%;
-  height: 100%;
   overflow: hidden; /*  Disable scrollbars, sometimes scrollbars can be useful */
-	display: block;  /* No floating content on sides - makes canvas act like a div as opposed to span. Ensures nothing displays on either size of the canvas */
 }
